--- a/views/pdf.pug
+++ b/views/pdf.pug
@@ -1,5 +1,5 @@
 extends layout
 
 block content
-    h1= 'test'
-    iframe(src='files/test.pdf', width='100%', height='500px')
+    h1= title
+    iframe(src=pdfLocation, width='100%', height='700px')
